src/objects/pse__Expense_Report__c.object
<CustomObject>
    <customHelpPage>pse__ExpenseReportHelp</customHelpPage>
    <description>Like a paper expense report, this object groups together a number of different expenses and allows you to submit, approve, and ultimately charge them to a project or assignment. Expense reports are associated with a given resource and project, and may also be associated with an assignment or project milestone.</description>
    <fields>
        <fullName>pse__Action_Check_Include_In_Financials__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Action checkbox that will update the Include in Financials checkbox asynchronously in order to avoid governor limits associated with native updates. This field is not intended for display. This is designed to support field updates in the approval process.</description>
        <label>Action: Update Include In Financials</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Admin_Global_Edit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, allows Admin to make &apos;global&apos; changes to the Expense Report, including edits to the ER&apos;s Project, Resource, Currency, or Date, even if Include In Financials is checked. Config requirement: Actuals Calculation Mode must be set to &apos;Scheduled&apos;.</description>
        <inlineHelpText>If checked, allows Admin to make &apos;global&apos; changes to the Expense Report, including edits to the ER&apos;s Project, Resource, Currency, or Date, even if Include In Financials is checked. Config requirement: Actuals Calculation Mode must be set to &apos;Scheduled&apos;.</inlineHelpText>
        <label>Admin Global Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox should be checked when the Expense Report is approved - typically by a workflow driven by the Status field.</description>
        <inlineHelpText>This checkbox should be checked when the Expense Report is approved - typically based on the Status field.</inlineHelpText>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Expense_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assignment</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>pse__Assignment__c.pse__Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.pse__Project__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>pse__Assignment__c</referenceTo>
        <relationshipLabel>Expense Reports</relationshipLabel>
        <relationshipName>Expense_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Audit_Notes_History__c</fullName>
        <description>Stores audit notes history. When a user changes a project or assignment on an expense report and the audit notes exceed 255 characters, older audit notes are moved and appended here.</description>
        <inlineHelpText>Stores audit notes history. When a user changes a project or assignment on an expense report and the audit notes exceed 255 characters, older audit notes are moved and appended here.</inlineHelpText>
        <label>Audit Notes History</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pse__Audit_Notes__c</fullName>
        <label>Audit Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pse__Billable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Billed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lines Billed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pse__Disable_Approval_Auto_Submit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, this should disable any PSA trigger-based automatic submit for approval for the Expense Report.</description>
        <inlineHelpText>If checked, this should disable any PSA trigger-based automatic submit for approval for the Expense Report.</inlineHelpText>
        <label>Disable Approval Auto Submit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Exclude_from_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, will by default check the Exclude from Billing checkbox on child Expenses, which has the same effect as Billing Hold, but intended to reflect a permanent exclusion from Billing Generation.</description>
        <inlineHelpText>If checked, will by default check the Exclude from Billing checkbox on child Expenses, which has the same effect as Billing Hold, but intended to reflect a permanent exclusion from Billing Generation.</inlineHelpText>
        <label>Exclude from Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Expense_Report_Reference__c</fullName>
        <externalId>true</externalId>
        <label>Expense Report Reference</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>pse__First_Expense_Date__c</fullName>
        <label>First Expense Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Include_In_Financials__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include In Financials</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Invoiced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lines Invoiced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Last_Expense_Date__c</fullName>
        <label>Last Expense Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Milestone</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>pse__Milestone__c.pse__Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.pse__Project__c</valueField>
            </filterItems>
            <infoMessage>The milestones of the related project are shown initially.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>pse__Milestone__c</referenceTo>
        <relationshipLabel>Expense Reports</relationshipLabel>
        <relationshipName>Expense_Reps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Override_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Overrides the Group to which the child Expense Transactions will roll up for Group Actuals, even if the Project is in a different Group. Typically an Expense&apos;s Transactions roll up to its Project&apos;s or Resource&apos;s Group based on &apos;follows&apos; rules. Note that either way, the Transactions will continue to roll up to the same Project&apos;s Project Actuals.</description>
        <inlineHelpText>Overrides the Group to which the child Expense Transactions will roll up for Group Actuals, even if the Project is in a different Group. Typically an Expense&apos;s Transactions roll up to its Project&apos;s or Resource&apos;s Group based on &apos;follows&apos; rules.</inlineHelpText>
        <label>Override Group</label>
        <referenceTo>pse__Grp__c</referenceTo>
        <relationshipLabel>Override Group For Expense Reports</relationshipLabel>
        <relationshipName>Override_Group_For_Expense_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Override_Practice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Overrides the Practice to which the child Expense Transactions will roll up for Practice Actuals, even if the Project is in a different Practice. Typically an Expense&apos;s Transactions roll up to its Project&apos;s or Resource&apos;s Practice based on &apos;follows&apos; rules. Note that either way, the Transactions will continue to roll up to the same Project&apos;s Project Actuals.</description>
        <inlineHelpText>Overrides the Practice to which the child Expense Transactions will roll up for Practice Actuals, even if the Project is in a different Practice. Typically an Expense&apos;s Transactions roll up to its Project&apos;s or Resource&apos;s Practice based on &apos;follows&apos; rules.</inlineHelpText>
        <label>Override Practice</label>
        <referenceTo>pse__Practice__c</referenceTo>
        <relationshipLabel>Override Practice For Expense Reports</relationshipLabel>
        <relationshipName>Override_Practice_For_Expense_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Override_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Overrides the Region to which the child Expense Transactions will roll up for Regional Actuals, even if the Project is in a different Region. Typically an Expense&apos;s Transactions roll up to its Project&apos;s or Resource&apos;s Region based on &apos;follows&apos; rules. Note that either way, the Transactions will continue to roll up to the same Project&apos;s Project Actuals.</description>
        <inlineHelpText>Overrides the Region to which the child Expense Transactions will roll up for Regional Actuals, even if the Project is in a different Region. Typically an Expense&apos;s Transactions roll up to its Project&apos;s or Resource&apos;s Region based on &apos;follows&apos; rules.</inlineHelpText>
        <label>Override Region</label>
        <referenceTo>pse__Region__c</referenceTo>
        <relationshipLabel>Override Region For Expense Reports</relationshipLabel>
        <relationshipName>Override_Region_For_Expense_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Project_Expense_Notes__c</fullName>
        <formula>IF(ISNULL(pse__Project__r.pse__Expense_Notes__c),&apos;&apos;,pse__Project__r.pse__Expense_Notes__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Expense Notes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Project_Methodology__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Project Methodology</description>
        <inlineHelpText>Lookup to Project Methodology</inlineHelpText>
        <label>Project Methodology</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>pse__Project_Methodology__c.pse__Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.pse__Project__c</valueField>
            </filterItems>
            <infoMessage>The methodologies of the related project are shown initially.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>pse__Project_Methodology__c</referenceTo>
        <relationshipLabel>Expense Reports</relationshipLabel>
        <relationshipName>Expense_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Project_Phase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Project Phase</description>
        <inlineHelpText>Lookup to Project Phase</inlineHelpText>
        <label>Project Phase</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>pse__Project_Phase__c.pse__Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.pse__Project__c</valueField>
            </filterItems>
            <infoMessage>The phases of the related project are shown initially.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>pse__Project_Phase__c</referenceTo>
        <relationshipLabel>Expense Reports</relationshipLabel>
        <relationshipName>Expense_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Expense Reports</relationshipLabel>
        <relationshipName>ExpenseReports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Reimbursement_Currency__c</fullName>
        <description>This field shows the 3-character currency code for the Resource being reimbursed.</description>
        <inlineHelpText>This field shows the 3-character currency code for the Resource being reimbursed.</inlineHelpText>
        <label>Reimbursement Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resource</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.pse__Is_Resource__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Contact.pse__Is_Resource_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Only active resources are shown. To display all resources, click Show all results.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Expense Reports</relationshipLabel>
        <relationshipName>ExpReports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Third_Party_Expenses_App_Report_ID__c</fullName>
        <description>The ID of the Expense Report from the Third-Party Expenses Application.</description>
        <inlineHelpText>The ID of the Expense Report from the Third-Party Expenses Application.</inlineHelpText>
        <label>Third-Party Expenses App Report ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Total_Billable_Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Total Billable Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Total_Non_Billable_Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Total Non-Billable Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Total_Reimbursement_Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>This number shows the total reimbursement amount in the Resource&apos;s currency.</description>
        <inlineHelpText>This number shows the total reimbursement amount in the Resource&apos;s currency.</inlineHelpText>
        <label>Total Reimbursement Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Expense Report</label>
    <listViews>
        <fullName>pse__All</fullName>
        <columns>NAME</columns>
        <columns>pse__First_Expense_Date__c</columns>
        <columns>pse__Last_Expense_Date__c</columns>
        <columns>pse__Status__c</columns>
        <columns>pse__Project__c</columns>
        <columns>pse__Resource__c</columns>
        <columns>pse__Billable__c</columns>
        <columns>pse__Total_Billable_Amount__c</columns>
        <columns>pse__Total_Non_Billable_Amount__c</columns>
        <columns>pse__Total_Reimbursement_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Expense Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expense Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>pse__PSE_Approver_Share__c</fullName>
        <label>PSE Approver Share</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>pse__PSE_Member_Share__c</fullName>
        <label>PSE Member Share</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>pse__PSE_PM_Share__c</fullName>
        <label>PSE PM Share</label>
    </sharingReasons>
    <validationRules>
        <fullName>pse__ExpenseReport_Asgnmt_Project_Mismatch</fullName>
        <active>true</active>
        <description>Assignment Project must match Expense Report Project.</description>
        <errorConditionFormula>AND(NOT(ISNULL(pse__Assignment__c)),NOT(ISNULL(pse__Assignment__r.pse__Project__c)),(pse__Assignment__r.pse__Project__c &lt;&gt; &apos;&apos;),(pse__Project__c &lt;&gt; pse__Assignment__r.pse__Project__c))</errorConditionFormula>
        <errorDisplayField>pse__Assignment__c</errorDisplayField>
        <errorMessage>Assignment Project must match Expense Report Project.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__ExpenseReport_Asgnmt_Resource_Mismatch</fullName>
        <active>true</active>
        <description>Assignment Resource must match Expense Report Resource.</description>
        <errorConditionFormula>AND(NOT(ISNULL(pse__Assignment__c)),(pse__Assignment__c &lt;&gt; &apos;&apos;),NOT(ISNULL(pse__Assignment__r.pse__Resource__c)),(pse__Assignment__r.pse__Resource__c &lt;&gt; &apos;&apos;),(pse__Resource__c &lt;&gt; pse__Assignment__r.pse__Resource__c))</errorConditionFormula>
        <errorDisplayField>pse__Assignment__c</errorDisplayField>
        <errorMessage>Assignment Resource must match Expense Report Resource.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__ExpenseReport_Milestone_Project_Mismatch</fullName>
        <active>true</active>
        <description>Milestone Project must match Expense Report Project.</description>
        <errorConditionFormula>AND(NOT(ISNULL(pse__Milestone__c)),NOT(ISNULL(pse__Milestone__r.pse__Project__c)),(pse__Milestone__r.pse__Project__c &lt;&gt; &apos;&apos;),(pse__Project__c &lt;&gt; pse__Milestone__r.pse__Project__c))</errorConditionFormula>
        <errorDisplayField>pse__Milestone__c</errorDisplayField>
        <errorMessage>Milestone Project must match Expense Report Project.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__ExpenseRpt_Methodology_Project_Mismatch</fullName>
        <active>true</active>
        <description>Validates whether the methodology selected on a expense report belongs to the same project as the expense report.</description>
        <errorConditionFormula>AND(NOT(ISNULL( pse__Project_Methodology__c )),(pse__Project_Methodology__c &lt;&gt; &apos;&apos;),NOT(ISNULL(pse__Project_Methodology__r.pse__Project__c)),(pse__Project_Methodology__r.pse__Project__c &lt;&gt; &apos;&apos;),(pse__Project__c &lt;&gt; pse__Project_Methodology__r.pse__Project__c))</errorConditionFormula>
        <errorDisplayField>pse__Project_Methodology__c</errorDisplayField>
        <errorMessage>Cannot associate the methodology with this expense report. The methodology must belong to the same project as the expense report. Select a methodology that belongs to the same project as the expense report.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__ExpenseRpt_Phase_Project_Mismatch</fullName>
        <active>true</active>
        <description>Validates whether the phase selected on a expense report belongs to the same project as the expense report.</description>
        <errorConditionFormula>AND(NOT(ISNULL( pse__Project_Phase__c )),( pse__Project_Phase__c &lt;&gt; &apos;&apos;),NOT(ISNULL( pse__Project_Phase__r.pse__Project__c)),(pse__Project_Phase__r.pse__Project__c &lt;&gt; &apos;&apos;),(pse__Project__c &lt;&gt; pse__Project_Phase__r.pse__Project__c))</errorConditionFormula>
        <errorDisplayField>pse__Project_Phase__c</errorDisplayField>
        <errorMessage>Cannot associate the phase with this expense report. The phase must belong to the same project as the expense report. Select a phase that belongs to the same project as the expense report.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Expense_Report_Approval_Requires_Submit</fullName>
        <active>true</active>
        <description>For an Expense Report to be marked as Approved, it must also be marked as Submitted.</description>
        <errorConditionFormula>AND(pse__Approved__c,NOT(pse__Submitted__c))</errorConditionFormula>
        <errorDisplayField>pse__Approved__c</errorDisplayField>
        <errorMessage>For an Expense Report to be marked as Approved, it must also be marked as Submitted.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Expense_Report_May_Not_Be_Billable</fullName>
        <active>true</active>
        <description>An Expense Report may only be marked as Billable if its Project is Billable and its Assignment, if any, is Billable.</description>
        <errorConditionFormula>AND(pse__Billable__c, OR(AND(NOT(ISNULL(pse__Assignment__c)), (pse__Assignment__c &lt;&gt; &apos;&apos;), NOT(pse__Assignment__r.pse__Is_Billable__c)), AND(NOT(ISNULL(pse__Project__c)), (pse__Project__c &lt;&gt; &apos;&apos;), NOT(pse__Project__r.pse__Is_Billable__c))))</errorConditionFormula>
        <errorDisplayField>pse__Billable__c</errorDisplayField>
        <errorMessage>An Expense Report may only be marked as Billable if its Project is Billable and its Assignment, if any, is Billable.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Expense_Report_Project_is_Constant</fullName>
        <active>true</active>
        <description>A Expense Report&apos;s Project field value may not be blank and may not be updated once set (unless Admin Global Edit is checked, Audit Notes are provided, and Actuals Calculation Mode is Scheduled).</description>
        <errorConditionFormula>OR(ISNULL(pse__Project__c),(pse__Project__c=&apos;&apos;),AND(ISCHANGED(pse__Project__c),OR(NOT(pse__Admin_Global_Edit__c),ISNULL(pse__Audit_Notes__c),ISBLANK(TRIM(pse__Audit_Notes__c)))))</errorConditionFormula>
        <errorDisplayField>pse__Project__c</errorDisplayField>
        <errorMessage>A Expense Report&apos;s Project field value may not be blank and may not be updated once set (unless Admin Global Edit is checked, Audit Notes are provided, and Actuals Calculation Mode is Scheduled).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Expense_Report_Resource_is_Constant</fullName>
        <active>true</active>
        <description>A Expense Report&apos;s Resource field value may not be blank and may not be updated once set (unless Admin Global Edit is checked, Audit Notes are provided, and Actuals Calculation Mode is Scheduled).</description>
        <errorConditionFormula>OR(ISNULL(pse__Resource__c),(pse__Resource__c=&apos;&apos;),AND(ISCHANGED(pse__Resource__c),OR(NOT(pse__Admin_Global_Edit__c),ISNULL(pse__Audit_Notes__c),ISBLANK(TRIM(pse__Audit_Notes__c)))))</errorConditionFormula>
        <errorDisplayField>pse__Resource__c</errorDisplayField>
        <errorMessage>A Expense Report&apos;s Resource field value may not be blank and may not be updated once set (unless Admin Global Edit is checked, Audit Notes are provided, and Actuals Calculation Mode is Scheduled).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Project_Requires_Exp_Report_Assignment</fullName>
        <active>true</active>
        <description>Expense Reports for this Project require an Assignment.</description>
        <errorConditionFormula>AND(NOT(pse__Project__r.pse__Allow_Expenses_Without_Assignment__c),OR(ISNULL(pse__Assignment__c),(pse__Assignment__c = &apos;&apos;)))</errorConditionFormula>
        <errorDisplayField>pse__Assignment__c</errorDisplayField>
        <errorMessage>Expense Reports for this Project require an Assignment.</errorMessage>
    </validationRules>
</CustomObject>